# orai

./: .gitignore  README.md  pyproject.toml
docs/: README.md  agents.md  commands.md  getting-started.md  how-it-works.md  project-structure.md
scripts/: rebrand.sh  setup.sh
src/orai/: __init__.py  cli.py  config.py  models.py
src/orai/executor/: runner.py  signals.py  skills.py  state.py
src/orai/planner/: context.py  decompose.py  interview.py  plan_state.py  product_spec.py
src/orai/prompts/: architect.md.j2  backend-go.md.j2  backend-node.md.j2  backend-python.md.j2  frontend.md.j2  pm.md.j2  tester.md.j2
src/orai/scaffold/: engine.py  existing.py
src/orai/scaffold/templates/go/: CLAUDE.md.j2  Skills.md.j2  agents.json.j2  go.mod.j2  health.go.j2  health_test.go.j2  main.go.j2  orchestration.json.j2  structure.json
src/orai/scaffold/templates/nextjs/: CLAUDE.md.j2  Skills.md.j2  layout.tsx.j2  orchestration.json.j2  package.json.j2  page.tsx.j2  structure.json
src/orai/scaffold/templates/node/: CLAUDE.md.j2  Skills.md.j2  agents.json.j2  example.test.ts.j2  index.ts.j2  orchestration.json.j2  package.json.j2  structure.json
src/orai/scaffold/templates/python/: CLAUDE.md.j2  Skills.md.j2  agents.json.j2  init.py.j2  main.py.j2  pyproject.toml.j2  structure.json  tdd-guidelines.md.j2  test_main.py.j2
src/orai/tui/: progress.py
src/orai/web/: server.py
src/orai/web/templates/: index.html
