[project]
name = "orai"
version = "0.1.0"
description = "Meta-Agentic Project Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
orai = "orai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orai"]
